--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-    font-family: 'futura';
+    font-family: 'Futura Std', sans-serif;
     background-color: #333;
     padding: 0.6rem 0;
 }
