--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
 }
 
 body {
-    font-family: 'futura';
+    font-family: 'Futura Std', sans-serif;
     background-color: #ffffff;
     text-rendering: optimizeLegibility;
 }
@@ -157,7 +157,7 @@ nav a:hover {
     gap: 10px;
     margin-left: 100px;
     margin-right: 100px;  /* Adjusted margin-right for consistency */
-    font-family: 'Futura Medium';   
+    font-family: 'Futura Std', sans-serif;  
     justify-content: center;
     font-size: 18px; 
     position: relative;
@@ -173,12 +173,12 @@ nav a:hover {
     margin-left: 100px;  
     margin-right: 100px;
     font-size: 18px;      
-    font-family: 'Futura Medium'; 
+    font-family: 'Futura Std', sans-serif;
 }
 
 .icon-button-book {
     margin-left: 100px;  
-    font-family: 'Futura Medium';   
+    font-family: 'Futura Std', sans-serif;  
     text-decoration: none; /* Removes underline */
     color: inherit; /* Inherits the color from its parent */
 }
